--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "declaration": true,
+    "lib": ["es2015"],
     "module": "commonjs",
     "noImplicitAny": true,
     "outDir": "dist",
     "strict": true,
+    "strictNullChecks": true,
     "target": "es5"
   },
   "include": ["src"]
