--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,11 @@
     "lib": ["es2015"],
     "module": "commonjs",
     "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "outDir": "dist",
     "strict": true,
-    "strictNullChecks": true,
     "target": "es5"
   },
   "include": ["src"]
