--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "build": "rimraf dist && tsc"
   },
   "devDependencies": {
-    "@types/node": "~14.0.0",
+    "@types/node": "^14.0.0",
     "rimraf": "~3.0.0",
-    "typescript": "3.9.2"
+    "typescript": "~4.1.0"
   },
   "bugs": {
     "url": "https://github.com/pietile/pietile-promise-observer/issues"
